{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 32,
  "lineage": "a12d1cdb-b20a-451d-9d98-cefdc08894be",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190444052124:internet-gateway/igw-08d0ee0afd4b35600",
            "id": "igw-08d0ee0afd4b35600",
            "owner_id": "190444052124",
            "tags": {
              "Name": "omnibus-eks-cluster-igw"
            },
            "tags_all": {
              "Name": "omnibus-eks-cluster-igw"
            },
            "vpc_id": "vpc-02a7612f51e47914f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190444052124:route-table/rtb-0101ea5bc200b55b6",
            "id": "rtb-0101ea5bc200b55b6",
            "owner_id": "190444052124",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08d0ee0afd4b35600",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "omnibus-eks-cluster-public-rt"
            },
            "tags_all": {
              "Name": "omnibus-eks-cluster-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a7612f51e47914f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcba84d21b35e071",
            "route_table_id": "rtb-0101ea5bc200b55b6",
            "subnet_id": "subnet-000cd0eabbf1d2bb6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040c6be96bbef53d1",
            "route_table_id": "rtb-0101ea5bc200b55b6",
            "subnet_id": "subnet-00ba81cccdea3453d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046fe9ffc4e5215f0",
            "route_table_id": "rtb-0101ea5bc200b55b6",
            "subnet_id": "subnet-0e8f1a5476aae2726"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190444052124:security-group/sg-0579e3f3620a6cf71",
            "description": "Security group for EKS cluster control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0579e3f3620a6cf71",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "omnibus-eks-cluster-cluster-sg",
            "name_prefix": "",
            "owner_id": "190444052124",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "omnibus-eks-cluster-cluster-sg"
            },
            "tags_all": {
              "Name": "omnibus-eks-cluster-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a7612f51e47914f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190444052124:subnet/subnet-000cd0eabbf1d2bb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000cd0eabbf1d2bb6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "190444052124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "omnibus-eks-cluster-public-10.0.1.0/24"
            },
            "tags_all": {
              "Name": "omnibus-eks-cluster-public-10.0.1.0/24"
            },
            "vpc_id": "vpc-02a7612f51e47914f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190444052124:subnet/subnet-00ba81cccdea3453d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ba81cccdea3453d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "190444052124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "omnibus-eks-cluster-public-10.0.2.0/24"
            },
            "tags_all": {
              "Name": "omnibus-eks-cluster-public-10.0.2.0/24"
            },
            "vpc_id": "vpc-02a7612f51e47914f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190444052124:subnet/subnet-0e8f1a5476aae2726",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8f1a5476aae2726",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "190444052124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "omnibus-eks-cluster-public-10.0.3.0/24"
            },
            "tags_all": {
              "Name": "omnibus-eks-cluster-public-10.0.3.0/24"
            },
            "vpc_id": "vpc-02a7612f51e47914f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190444052124:vpc/vpc-02a7612f51e47914f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0856b8fb881dc3298",
            "default_route_table_id": "rtb-01bbc5489affad0ff",
            "default_security_group_id": "sg-03c36169abee91450",
            "dhcp_options_id": "dopt-043c6877c0a1d9376",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02a7612f51e47914f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01bbc5489affad0ff",
            "owner_id": "190444052124",
            "tags": {
              "Name": "omnibus-eks-cluster-vpc"
            },
            "tags_all": {
              "Name": "omnibus-eks-cluster-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}